fixing search bar alignment problems

--- a/css/global.css
+++ b/css/global.css
@@ -61,13 +61,13 @@ form, #searchBar {
 }
 .globalSearch_icon {
   border: 2px solid #222;  
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  /* border-top-left-radius: 0;
+  border-bottom-left-radius: 0; */
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
   border-left: 0;
-  padding-top: 2px;
-  width: 51px ;
+  padding: 0;
+  width: 51px;
   height: 51px;
 }
 #searchBar:hover .globalSearch_icon {
@@ -229,6 +229,13 @@ label.topicButton {
 input[type=radio] {
   opacity:0;
   position: absolute;
+}
+
+.transparent {
+  opacity: 0;
+}
+.fadeable { 
+  transition: opacity .5s ease-in;
 }
 
 /* Lightbox */
